# plasma-swipe-keyboard

./: .gitignore  CMakeLists.txt  PLAN.md  run-test.sh
layouts/en_US/: handwriting.qml  main.qml
layouts/fallback/: dialpad.qml  digits.qml  main.qml  numbers.qml  symbols.qml
scripts/: swipe-im-wrapper.sh
src/: swipeinputmethod.cpp  swipeinputmethod.h  wordmatcher.cpp  wordmatcher.h
test/: test_matcher.cpp  testapp.qml
